[package]
name = "space-decay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "^0.9.1"
bevy_egui = "0.18.0"
bevy-inspector-egui = "0.15.0"
bevy_rapier2d = { version = "0.19.0", features = [
    "simd-stable",
    "debug-render",
] }
rand = "^0.8.5"
rustpg = {git = "https://github.com/Nilsiker/rustpg.git"}
bevy_atmosphere = "0.5.0"